--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Site Escola</title>
 </head>
 <body>
-    <h2>Vai ser uma imagem aqui</h2>
+    <h1>Vai ser uma imagem aqui</h1>
+    <h3>Legenda da imagem</h3>
     
 </body>
-</html>
+</html> 
