--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site Escola</title>
+    <link rel="stylesheet"  href="style.css">
 </head>
 <body>
     <h1>Vai ser uma imagem aqui</h1>
-    <h3>Legenda da imagem</h3>
+    <ul>
+      <li>Estudante </li>
+      <li>Escola</li>
+
+    </ul>
     
 </body>
 </html> 
