--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <title>Site Escola</title>
     <link rel="stylesheet"  href="style.css">
 </head>
-<body>
-    <h1>Vai ser uma imagem aqui</h1>
+<header>
+    <img src="./img1.png" alt="Logo Alura">
     <ul>
       <li>Estudante </li>
       <li>Escola</li>
 
     </ul>
     
-</body>
+</header>
 </html> 
