--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title>Site Escola</title>
     <link rel="stylesheet"  href="style.css">
 </head>
-<header>
-    <img src="./img1.png" alt="Logo Alura">
-    <ul>
-      <li>Estudante </li>
-      <li>Escola</li>
+<header class="cabecalho">
+    <img class="cabecalho-imagem" src="./img1.png" alt="Logo Alura">
+    <ul class="cabecalho-lista-item">
+      <li class="cabecalho-lista-item">Estudante </li>
+      <li class="cabecalho-lista-item">Escola</li>
 
     </ul>
     
