--- a/index.html
+++ b/index.html
@@ -2,18 +2,21 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site Escola</title>
-    <link rel="stylesheet"  href="style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <header class="cabecalho">
-    <img class="cabecalho-imagem" src="./img1.png" alt="Logo Alura">
+    <img class="cabecalho-imagem" src="./img/img1.png" alt="Logo Alura">
     <ul class="cabecalho-lista-item">
-      <li class="cabecalho-lista-item">Estudante </li>
-      <li class="cabecalho-lista-item">Escola</li>
-
+        <li class="cabecalho-lista-item">Estudante</li>
+        <li class="cabecalho-lista-item">Escola</li>
     </ul>
-    
 </header>
-</html> 
+<section class="escola">
+    <h2 class="escola-titulo">Sobre a Escola</h2>
+    <p class="escola-texto-um">A escola Alura foi fundada em 2010 com o objetivo de ensinar Pensamento Computacional através da Programação.</p>
+    <p class="escola-texto-dois">A turma mais famosa é a Segunda Série A. Uma turma diversa e engajada, as vezes, um pouco bagunceira, mas que entrega excelentes resultados!</p>
+    <img class="escola-imagem" src="./img/img2.png" alt="Professor no quadro">
+</section>
+</html>
