--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 </section>
 <section class="estudante">
     <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
-    <img src="./img/img3.png " alt="Foto marcelo">
+    <img class="estudante-imagem" src="./img/img3.png " alt="Foto marcelo">
+    <h3>Marcelo</h3>
 </section>
 </html>
