--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <header class="cabecalho">
-    <img class="cabecalho-imagem" src="./img/img1.png" alt="Logo Alura">
+    <img class="cabecalho-imagem" src="./img/campeoachaniioins.webp" alt="Logo Alura">
     <ul class="cabecalho-lista-item">
         <li class="cabecalho-lista-item">Estudante</li>
         <li class="cabecalho-lista-item">Escola</li>
@@ -18,15 +18,83 @@
 </header>
 <section class="escola">
     <div class="escola-conteudo">
-        <h2 class="escola-titulo">Sobre a Escola</h2>
-        <p class="escola-texto-um">A escola Alura foi fundada em 2010 com o objetivo de ensinar Pensamento Computacional através da Programação.</p>
-        <p class="escola-texto-dois">A turma mais famosa é a Segunda Série A. Uma turma diversa e engajada, as vezes, um pouco bagunceira, mas que entrega excelentes resultados!</p>
+        <h2 class="escola-titulo">Sobre o Real Madrid Club de Fútbol</h2>
+        <p class="escola-texto-um">O Real Madrid Club de Fútbol, comumente referido como Real Madrid, é um clube de futebol profissional espanhol sediado em Madrid.</p>
+        <p class="escola-texto-dois">Compete na La Liga, a principal competição do sistema de ligas da Espanha.</p>
     </div>
-    <img class="escola-imagem" src="./img/img2.png" alt="Professor no quadro">
+    <img class="escola-imagem" src="./img/logoreal2.png" alt="Professor no quadro">
 </section>
 <section class="estudante">
-    <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
-    <img class="estudante-imagem" src="./img/img3.png " alt="Foto marcelo">
-    <h3>Marcelo</h3>
+    <h2 class="estudante-titulo">Quem são nossos jogadores?</h2>
+    <div class="estudante-todos">
+        <span></span>
+        <div class="estudante-div">
+         <img class="estudante-imagem" src="./img/valverede.jpeg" alt="Foto Marcelo">
+         <h3>Valverde</h3>
+          <img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram">
+         <img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram">
+         <img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram">
+        </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="./img/bellinghan.jpeg" alt="Foto Marcelo">
+            <h3>Bellinghan</h3>
+             <img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram">
+            <img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram">
+            <img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram">
+        </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="./img/vinijr.webp" alt="Foto Marcelo">
+            <h3>Vini jr.</h3>
+             <img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram">
+            <img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram">
+            <img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram">
+        </div>
+        <span></span>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="./img/rodrygo.jpeg" alt="Foto Marcelo">
+            <h3>Rodrygo</h3>
+             <img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram">
+            <img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram">
+            <img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram">
+        </div>
+    
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="./img/camavinga.webp" alt="Foto Marcelo">
+            <h3>Camavinga</h3>
+             <img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram">
+            <img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram">
+            <img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram">
+        </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="./img/courtois.jpeg" alt="Foto Marcelo">
+            <h3>Courtois</h3>
+             <img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram">
+            <img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram">
+            <img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram">
+        </div>
+        <span></span>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="./img/modric.webp" alt="Foto Marcelo">
+            <h3>Modric</h3>
+             <img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram">
+            <img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram">
+            <img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram">
+        </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="./img/rudiger.jpeg" alt="Foto Marcelo">
+            <h3>Rüdiger</h3>
+             <img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram">
+            <img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram">
+            <img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram">
+        </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="./img/anchelotti.png" alt="Foto Marcelo">
+            <h3>Ancelotti</h3>
+             <img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram">
+            <img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram">
+            <img class="estudante-icone" src="./img/instagram.png" alt="Logo instagram">
+        </div>
+        
+    </div>
 </section>
 </html>
