--- a/index.html
+++ b/index.html
@@ -84,4 +84,9 @@
         
     </div>
 </section>
+
+<footer>
+    <img class="rodape-imagem" src="./IMAGENS/img1.png" alt="Logo Alura Start">
+</footer>
+
 </html>
